--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	 <body>
 		<!-- ======================================= -->
 	<div class="wrapper">
-		<maine class="maine page">
 				<page class="page-header">
 					<h1 class="header-title">Fakta om Sverige</h1>
 					<img class="page-header" src="img/Ren342591.jpeg" alt="not work">
@@ -31,7 +30,7 @@
 								<a target="_blanck" href="https://twitter.com" class="item">Twitter</a>
 							</li>
 						</ul>
-						<p>Det största landet i Norden är också det med flest invånare. För många är <span>Sverige synonymt med monterbara</spa> möbler, innovation och produktion av järn och stål. Sverige använder <span class="page">3% av landets </span>bruttonationalprodukt på forskning och utveckling.</p>
+						<p>Det största landet i Norden är också det med flest invånare. För många är <span>Sverige synonymt med monterbara</span> möbler, innovation och produktion av järn och stål. Sverige använder <span class="page">3% av landets </span>bruttonationalprodukt på forskning och utveckling.</p>
                  <p class="page">Sverige delar landsgräns med Norge i väst och till Finland i nordost. Sverige har <span>också kust mot de nordiska </span>grannarna Danmark, Norge, Åland och Finland.</p>
 					  </div>
              
@@ -39,8 +38,8 @@
 
 					<h2 class="body-politik">Politik i Sverige</h2>
 					 <p class="politik">Sverige är en konstitutionell monarki. Kung Carl XVI Gustaf har ingen reell politisk makt, och riksdagen är landets högsta myndighet.</p>
-               <p>Sverige är medlem i EU, men har behållit kronan som valuta. <span class="khaki">Landet är inte medlem </span>i Nato.  </p>
-					<menu class="politik"">
+               <p>Sverige är medlem i EU, men har behållit kronan som valuta. <span class="khaki">Landet är inte medlem </span>i Nato. </p>
+					<menu class="politik">
                <div class="menu__item">
                      <ul class="item">
                      </ul> 
@@ -86,7 +85,6 @@
 						
 
      </div>              
-   </maine>
 </div>
 </body>
 </html>
