--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	</head>
 	 <body>
 		<!-- ======================================= -->
-	<div class="wrapper">
-				<page class="page">
+				<page class="page-block">
 					<h1 class="page-title">Fakta om Sverige</h1>
 					<img class="page-img" src="img/Ren342591.jpeg" alt="not work">
 					<p class="page text-bottom">Fotograf Johannes Jansson/norden.org</p>
@@ -33,6 +32,7 @@
 						<p>Det största landet i Norden är också det med flest invånare. För många är <span>Sverige synonymt med monterbara</span> möbler, innovation och produktion av järn och stål. Sverige använder <span class="page">3% av landets </span>bruttonationalprodukt på forskning och utveckling.</p>
                  <p class="page">Sverige delar landsgräns med Norge i väst och till Finland i nordost. Sverige har <span>också kust mot de nordiska </span>grannarna Danmark, Norge, Åland och Finland.</p>
 				  </div>
+			 </div>
              
 				<div class="body-politik">
 
@@ -77,8 +77,7 @@
                Människor som anser sig tvungna att gå ”utöver” detta — genom att oupphörligt svärja på vad de säger — avslöjar att de i grund och botten är opålitliga.</p>
 					<p class="big-plump">Mos 5:21, 22) I tråd med dette kan det bli nødvendig for en kristen å sverge på at han skal si sannheten, hvis han skal vitne i en rettssak.
                5:21, 22) <span class="big-peru">Det kan därför vara nödvändigt att en kristen svär att </span>säga sanningen när han vittnar i en domstol.</p>
-				</div>
-    </div>              
+				</div>          
 </body>
 </html>
                
