--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	</head>
 	 <body>
 		<!-- ======================================= -->
-				<page class="page-block">
+				<main class="main">
+					
 					<h1 class="page-title">Fakta om Sverige</h1>
 					<img class="page-img" src="img/Ren342591.jpeg" alt="not work">
 					<p class="page text-bottom">Fotograf Johannes Jansson/norden.org</p>
@@ -32,9 +33,9 @@
 						<p>Det största landet i Norden är också det med flest invånare. För många är <span>Sverige synonymt med monterbara</span> möbler, innovation och produktion av järn och stål. Sverige använder <span class="page">3% av landets </span>bruttonationalprodukt på forskning och utveckling.</p>
                  <p class="page">Sverige delar landsgräns med Norge i väst och till Finland i nordost. Sverige har <span>också kust mot de nordiska </span>grannarna Danmark, Norge, Åland och Finland.</p>
 				  </div>
-			 </div>
+			 </main>
              
-				<div class="body-politik">
+			<!-- <div class="body-politik"> -->
 
 					<h2 class="body-politik">Politik i Sverige</h2>
 					 <p class="politik">Sverige är en konstitutionell monarki. Kung Carl XVI Gustaf har ingen reell politisk makt, och riksdagen är landets högsta myndighet.</p>
@@ -66,7 +67,6 @@
 				     <a class="politik-body" target="_blank"  href="https://www.norden.org/sv/information/politik">
                  Om politik i de nordiska länderna
                  </a>
-          </div>
 				<div class="sverge">
 					<h3 class="sverge">Sveriges befolkning</h3>
 					<p class="big-red">Rapporten State of the Nordic region ges ut vartannat år och ger en omfattande och unik inblick bakom kulisserna på de nordiska länderna. Rapporten bygger på den senaste övergripande statistiken när det gäller demografiska förändringar, arbetsmarknadstrender, utbildning och ekonomiska resultat i Norden.</p>
