--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 					<div class="menu-page">
 						<ul class="menu-item">
 							<li class="item">
-								<a target="_blanck" href="https://www.google.com/intl/sv/gmail/about/" class="item">Mail</a>
+								<a href="https://www.google.com/intl/sv/gmail/about/" class="item">Mail</a>
 							</li>
 							<li class="item">
-								<a target="_blanck" href="https://m.facebook.com/login/?locale=sv_SE" class="item">Facebook</a>
+								<a href="https://m.facebook.com/login/?locale=sv_SE" class="item">Facebook</a>
 							</li>
 							<li class="item">
-								<a target="_blanck"  href="https://www.linkedin.com/uas/login" class="item">Linkedin</a>
+								<a href="https://www.linkedin.com/uas/login" class="item">Linkedin</a>
 							</li>
 							<li class="item">
-								<a target="_blanck" href="https://twitter.com" class="item">Twitter</a>
+								<a href="https://twitter.com" class="item">Twitter</a>
 							</li>
 						</ul>
-						<p>Det största landet i Norden är också det med flest invånare. För många är <span>Sverige synonymt med monterbara</span> möbler, innovation och produktion av järn och stål. Sverige använder <span class="page">3% av landets </span>bruttonationalprodukt på forskning och utveckling.</p>
+						<p top-hotping>Det största landet i Norden är också det med flest invånare. För många är <span>Sverige synonymt med monterbara</span> möbler, innovation och produktion av järn och stål. Sverige använder <span class="page">3% av landets </span>bruttonationalprodukt på forskning och utveckling.</p>
                  <p class="page">Sverige delar landsgräns med Norge i väst och till Finland i nordost. Sverige har <span>också kust mot de nordiska </span>grannarna Danmark, Norge, Åland och Finland.</p>
 				  </div>
 			 </main>
@@ -41,7 +41,7 @@
 					 <p class="politik">Sverige är en konstitutionell monarki. Kung Carl XVI Gustaf har ingen reell politisk makt, och riksdagen är landets högsta myndighet.</p>
                <p>Sverige är medlem i EU, men har behållit kronan som valuta. <span class="khaki">Landet är inte medlem </span>i Nato. </p>
 					<menu class="politik">
-               <div class="menu__item">
+               <ol class="menu__item">
                      <ul class="item">
                      </ul> 
 					     <ul class="item">
@@ -62,7 +62,7 @@
                      <ul class="item">
                          <li class="item">Regeringschef (november 2021): Statsminister <a target="_blank" href="https://www.norden.org/en/person/magdalena-andersson">Magdalena Andersson</a> (Socialdemokraterna)</li>
                      </ul>
-                 </div>
+                 </ol>
              </menu>
 				     <a class="politik-body" target="_blank"  href="https://www.norden.org/sv/information/politik">
                  Om politik i de nordiska länderna
