--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<a href="https://twitter.com" class="item">Twitter</a>
 							</li>
 						</ul>
-						<p top-hotping>Det största landet i Norden är också det med flest invånare. För många är <span>Sverige synonymt med monterbara</span> möbler, innovation och produktion av järn och stål. Sverige använder <span class="page">3% av landets </span>bruttonationalprodukt på forskning och utveckling.</p>
+						<p class="top-hotping">Det största landet i Norden är också det med flest invånare. För många är <span>Sverige synonymt med monterbara</span> möbler, innovation och produktion av järn och stål. Sverige använder <span class="page">3% av landets </span>bruttonationalprodukt på forskning och utveckling.</p>
                  <p class="page">Sverige delar landsgräns med Norge i väst och till Finland i nordost. Sverige har <span>också kust mot de nordiska </span>grannarna Danmark, Norge, Åland och Finland.</p>
 				  </div>
 			 </main>
@@ -41,7 +41,7 @@
 					 <p class="politik">Sverige är en konstitutionell monarki. Kung Carl XVI Gustaf har ingen reell politisk makt, och riksdagen är landets högsta myndighet.</p>
                <p>Sverige är medlem i EU, men har behållit kronan som valuta. <span class="khaki">Landet är inte medlem </span>i Nato. </p>
 					<menu class="politik">
-               <ol class="menu__item">
+               <ul class="menu__item">
                      <ul class="item">
                      </ul> 
 					     <ul class="item">
@@ -62,7 +62,7 @@
                      <ul class="item">
                          <li class="item">Regeringschef (november 2021): Statsminister <a target="_blank" href="https://www.norden.org/en/person/magdalena-andersson">Magdalena Andersson</a> (Socialdemokraterna)</li>
                      </ul>
-                 </ol>
+                 </ul>
              </menu>
 				     <a class="politik-body" target="_blank"  href="https://www.norden.org/sv/information/politik">
                  Om politik i de nordiska länderna
@@ -77,6 +77,8 @@
                Människor som anser sig tvungna att gå ”utöver” detta — genom att oupphörligt svärja på vad de säger — avslöjar att de i grund och botten är opålitliga.</p>
 					<p class="big-plump">Mos 5:21, 22) I tråd med dette kan det bli nødvendig for en kristen å sverge på at han skal si sannheten, hvis han skal vitne i en rettssak.
                5:21, 22) <span class="big-peru">Det kan därför vara nödvändigt att en kristen svär att </span>säga sanningen när han vittnar i en domstol.</p>
+					<img src="img/статистика.png" alt="not work">
+					<p>Rapporten State of the Nordic region ges ut vartannat år och ger en omfattande och unik inblick bakom kulisserna på de nordiska länderna. <mark>Rapporten bygger på den senaste övergripande statistiken när det gäller demografiska förändringar</mark>, arbetsmarknadstrender, utbildning och ekonomiska resultat i Norden.</p>
 				</div>          
 </body>
 </html>
