--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					 <p class="politik">Sverige är en konstitutionell monarki. Kung Carl XVI Gustaf har ingen reell politisk makt, och riksdagen är landets högsta myndighet.</p>
                <p>Sverige är medlem i EU, men har behållit kronan som valuta. <span class="khaki">Landet är inte medlem </span>i Nato. </p>
 					<menu class="politik">
-               <ul class="menu__item">
+               <ul class="menu-item">
                      <ul class="item">
                      </ul> 
 					     <ul class="item">
